[FIX] web_calendar: remove hack about z-index for dhtmlxSchedule glossy theme - we're not using this one anymore

--- a/addons/web_calendar/static/src/css/web_calendar.sass
+++ b/addons/web_calendar/static/src/css/web_calendar.sass
@@ -27,11 +27,6 @@
         // Dhtmlx Scheduler css overrides
         .dhx_cal_select_menu .dhx_menu_icon.icon_edit
             display: none
-        .dhx_cal_navline, .dhx_cal_header
-            // dhtmlx sets the index to 3 (in glossy theme)
-            // I didn't found the reason yet but it overlaps the
-            // dropdown menus and I want to avoid a z-index war.
-            z-index: auto
 
         .dhx_cal_event_line, .dhx_cal_event_clear
             font-size: 13px
